# multi_map_navigation

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  plugin_description.xml  setup.py  test_mongo  test_pose
action/: MultiMapNavigation.action  MultiMapNavigationTargetElevator.action  MultiMapNavigationTransition.action  MultiMapServer.action
config/: map_setting.rviz
config/multi_map/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
icons/classes/: BaseMapCommPoseTool.psd  SecondaryMapCommPoseTool.psd
launch/: 2dnav.launch  2dnav_multi_map.launch  2dnav_multimap.launch  add_map_mongodb.launch  map_store.launch  map_store_settings.launch  mmn.launch  multi_map_common.launch  multi_map_navigation.launch
launch/examples/: multi_map_navigation.launch
launch/robocup/: mmn.launch  move_base_robocup.launch  my_launch_file.launch
launch/sdp/: move_base_sdp.launch
launch/settings/: add_map_mongodb.launch  map_settings.launch  slam_map.launch
launch/setup/: map_store.launch  mongodb_server.launch
launch/templates/: move_base_template.launch
maps/partial-c069-maps/dining-room/: map.pgm  map.yaml
maps/partial-c069-maps/diningC069/: map.pgm
maps/partial-c069-maps/dummy/: map.pgm  map.yaml
maps/partial-c069-maps/exit-hallway/: map.pgm  map.yaml
maps/partial-c069-maps/kitchen/: map.pgm
maps/partial-c069-maps/living-room/: map.pgm  map.yaml
maps/partial-c069-maps/livingC069/: map.pgm
maps/partial-c069-maps/shelf/: map.pgm
msg/: MultiMapNavigationAction.msg  MultiMapNavigationActionFeedback.msg  MultiMapNavigationActionGoal.msg  MultiMapNavigationActionResult.msg  MultiMapNavigationFeedback.msg  MultiMapNavigationGoal.msg  MultiMapNavigationTransitionAction.msg  MultiMapNavigationTransitionActionFeedback.msg  MultiMapNavigationTransitionActionGoal.msg  MultiMapNavigationTransitionActionResult.msg  MultiMapNavigationTransitionGoal.msg  elevatorRequest.msg
ros/launch/: mmn.launch
ros/scripts/: custom_controller.py  elevator_controller.py  multi_map_navigation_manager.py  vacuous_controller.py
ros/src/multi_map_navigation/: elevator_manager.py  map_manager.py  map_navigator.py  multimap_transition.py  vacuous_transition.py
rviz/: multi_map_navigation.rviz  multi_map_sdp.rviz
scripts/: multi_map_navigation_manager.py  multi_map_navigation_test.py  my_multi_map_navigation_manager.py  transition_test.py  vacuous_transition.py
scripts/multi_map_transitions/: elevator_manager.py  multimap_transition.py
scripts/tools/: amcl_restarter.py
src/multi_map_navigation/: .map_navigator.py.swp  map_manager.py  map_navigator.py
src/plugins/map_alignment_tools/: base_comm_pose_tool.cpp  base_comm_pose_tool.h  secondary_comm_pose_tool.cpp  secondary_comm_pose_tool.h
src/plugins/map_manager/: .map_manager_panel.h.swp  map_manager_panel.cpp  map_manager_panel.h  map_server.cpp  map_server.cpp~
src/plugins/navigation/: multi_map_pose_tool.cpp  multi_map_pose_tool.h  navigation_panel.cpp  navigation_panel.h
src/rviz_plugins/map_alignment_tools/: secondary_comm_pose_tool.cpp
src/rviz_plugins/map_manager/: map_manager_panel.cpp  map_manager_panel.h
src/rviz_plugins/navigation_panel/: multi_map_pose_tool.cpp  navigation_panel.cpp  navigation_panel.h
src/scripts/navigation/: map_manager.py  map_navigator.py  multi_map_navigation_manager.py  my_multi_map_navigation_manager.py
src/scripts/transitions/: elevator_manager.py  vacuous_transition.py
src/scripts/utilities/: amcl_restarter.py
srv/: SetMap.srv
yaml/: CMakeLists.txt  README.md  config.yaml  config2.yaml  custom_config.yaml  elevator_config.yaml  map_description.yaml  map_description.yaml~  my_config.yaml  networkx.yaml  notes  package.xml  real_config.yaml  setup.py
