<package>
  <name>multi_map_navigation</name>
  <version>0.0.0</version>
  <description>Multi-level map navigation</description>
  <maintainer email="mohit.appi@gmail.com">MohitSridhar</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>map_store</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>warehouse_ros</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>map_store</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>warehouse_ros</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  
</package>


