<package>
  <name>multi_map_navigation</name>
  <version>0.0.0</version>
  <description>Multi-level map navigation</description>
  <maintainer email="mohit.appi@gmail.com">Mohit Shridhar</maintainer>
  <maintainer email="ltw_david@hotmail.com">David Lee</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>map_server</build_depend>
  <build_depend>multi_map_server</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>map_store</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>warehouse_ros</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>map_store</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>warehouse_ros</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>multi_map_server</run_depend>
  <run_depend>tf</run_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
